[package]
name = "rust_utils"
version = "1.0.4"
edition = "2024"

[dependencies]
bytes = "1.10.1"
image = "0.25.8"
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Devices_WiFi", "Networking_Connectivity"] }